--- a/.github/workflows/upload.yml
+++ b/.github/workflows/upload.yml
@@ -15,22 +15,16 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  deployment:
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
+    - name: Deploy Stage
+      uses: fjogeleit/http-request-action@v1.10.0
+      with:
+        url: 'https://anypoint.mulesoft.com/exchange/api/v2/assets/4d8a7855-5da7-433b-893a-09e5c1e8fff3/sample/1.0.0/portal/draft/pages/Description'
+        method: 'POST'
+        bearerToken: '4d8a7855-5da7-433b-893a-09e5c1e8fff3'
+        customHeaders: '{"Content-Type": "text/markdown"}'
+        file: "${{ github.workspace }}/sample.md"
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+      
