--- a/.github/workflows/upload.yml
+++ b/.github/workflows/upload.yml
@@ -18,6 +18,8 @@ jobs:
   deployment:
     runs-on: ubuntu-latest
     steps:
+    - name: File Reader
+      uses: andstor/file-reader-action@v1.0.0
     - name: Deploy Stage
       uses: fjogeleit/http-request-action@v1.10.0
       with:
@@ -25,6 +27,6 @@ jobs:
         method: 'POST'
         bearerToken: '4d8a7855-5da7-433b-893a-09e5c1e8fff3'
         customHeaders: '{"Content-Type": "text/markdown"}'
-        file: "$file.md"
+        file: "file.md"
 
       
