--- a/.github/workflows/upload.yml
+++ b/.github/workflows/upload.yml
@@ -18,6 +18,7 @@ jobs:
   deployment:
     runs-on: ubuntu-latest
     steps:
+    - uses: actions/checkout@v3
     - name: Read file contents
       id: read_file
       uses: andstor/file-reader-action@v1
