--- a/.github/workflows/upload.yml
+++ b/.github/workflows/upload.yml
@@ -23,7 +23,7 @@ jobs:
       uses: fjogeleit/http-request-action@v1.10.0
       with:
         url: 'https://anypoint.mulesoft.com/exchange/api/v2/assets/4d8a7855-5da7-433b-893a-09e5c1e8fff3/sample/1.0.0/portal/draft/pages/Description'
-        method: 'POST'
+        method: 'PUT'
         bearerToken: '4d8a7855-5da7-433b-893a-09e5c1e8fff3'
         customHeaders: '{"Content-Type": "text/markdown"}'
         file: "file.md"
