--- a/.github/workflows/upload.yml
+++ b/.github/workflows/upload.yml
@@ -19,13 +19,41 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-    - name: Deploy Stage
+    - name: Architecture diagram upload
       uses: fjogeleit/http-request-action@v1.10.0
       with:
-        url: 'https://anypoint.mulesoft.com/exchange/api/v2/assets/e3791168-3b1f-42be-885f-f961c1db6a86/sample/1.0.0/portal/draft/pages/Description'
+        url: 'https://anypoint.mulesoft.com/exchange/api/v2/assets/e3791168-3b1f-42be-885f-f961c1db6a86/sample/1.0.0/portal/draft/pages/architecture documents'
         method: 'PUT'
-        bearerToken: '4d8a7855-5da7-433b-893a-09e5c1e8fff3'
+        bearerToken: '12f47193-abd9-4983-bf46-2e8a5a4ca40d'
         customHeaders: '{"Content-Type": "text/markdown"}'
-        file: "file.md"
-
-      
+        file: "architecture.md"
+    - name: Technical details upload
+      uses: fjogeleit/http-request-action@v1.10.0
+      with:
+        url: 'https://anypoint.mulesoft.com/exchange/api/v2/assets/e3791168-3b1f-42be-885f-f961c1db6a86/sample/1.0.0/portal/draft/pages/technical documents'
+        method: 'PUT'
+        bearerToken: '12f47193-abd9-4983-bf46-2e8a5a4ca40d'
+        customHeaders: '{"Content-Type": "text/markdown"}'
+        file: "technicaldetails.md"
+    - name: API policies upload
+      uses: fjogeleit/http-request-action@v1.10.0
+      with:
+        url: 'https://anypoint.mulesoft.com/exchange/api/v2/assets/e3791168-3b1f-42be-885f-f961c1db6a86/sample/1.0.0/portal/draft/pages/API policies'
+        method: 'PUT'
+        bearerToken: '12f47193-abd9-4983-bf46-2e8a5a4ca40d'
+        customHeaders: '{"Content-Type": "text/markdown"}'
+        file: "apipolicies.md"
+    - name: Testing Model upload
+      uses: fjogeleit/http-request-action@v1.10.0
+      with:
+        url: 'https://anypoint.mulesoft.com/exchange/api/v2/assets/e3791168-3b1f-42be-885f-f961c1db6a86/sample/1.0.0/portal/draft/pages/Testing Model'
+        method: 'PUT'
+        bearerToken: '12f47193-abd9-4983-bf46-2e8a5a4ca40d'
+        customHeaders: '{"Content-Type": "text/markdown"}'
+        file: "testingmodel.md"
+    - name: Publish to exchange
+      uses: fjogeleit/http-request-action@v1.10.0
+      with:
+        url: 'https://anypoint.mulesoft.com/exchange/api/v2/assets/e3791168-3b1f-42be-885f-f961c1db6a86/sample/1.0.0/portal'
+        method: 'PATCH'
+        bearerToken: '12f47193-abd9-4983-bf46-2e8a5a4ca40d'
